--- a/app/src/main/res/layout/activity_afficher_annonce.xml
+++ b/app/src/main/res/layout/activity_afficher_annonce.xml
@@ -156,6 +156,26 @@
                 android:layout_marginTop="16dp"
                 app:srcCompat="@mipmap/ic_logo" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageleft_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    mapbox:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+                <ImageView
+                    android:id="@+id/imageright_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    mapbox:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
+            </LinearLayout>
+
             <View
                 android:id="@+id/divider2"
                 android:layout_width="match_parent"
